--- a/_posts/2021-02-02-Comma.md
+++ b/_posts/2021-02-02-Comma.md
@@ -1,5 +1,5 @@
 ---
-title: Comma는 어떻게 써야 하는가?
+title: 군더더기 삽입의 용도로 쓰이는 comma에 대하여
 author: Saekwang Nam
 date: 2021-02-02 23:52:00 +0100
 categories: [Technical Writing, 기호 및 그 외]
@@ -30,4 +30,18 @@ pinned: false
  저 뉴욕타임스의 신문기자는 제프 베조스가 누구인지 독자들이 대부분 이해할 것이라 가정하며, 글의 정황상 Andy Jassy 또한 삽입구로 간단하게 설명하였다. 영어 신문을 읽어보면 알겠지만, 무엇보다도 신문은 유명인을 소재로 글을 쓰기 때문에 인물 묘사의 경우, 문장이 구질구질해지는 관계사절보다는 삽입구로 간결하게 표현해 주는 경우가 많다.
 
 ### 논문에는 어떤 표현이 많을까?
-다음 시간에...
+정답부터 말하자면 콤마가 없는 관계사절이 더 많다. 그 이유는 논문의 문장 자체가 어떤 선행사를 구체적으로 설명하는 목적이 강하기 때문이다.
+
+> The flattened image was transformed to estimate the **image** *that the camera would see if it was positioned perpendicular to the glass plate*. ([출처](https://www.frontiersin.org/articles/10.3389/fnins.2020.00235/full?report=reader))
+> - 단순히 that 이하의 관계사절이 빠진다면 the image 라는 것이 무엇을 뜻하는 것인지 애매모호 해진다. 따라서 그것이 무엇인지 that 이하에서 자세히 설명해 주고 있다. 따라서 that 이하는 콤마를 쓰지 않고 선행사를 한정지어 주는 역할을 한다.
+
+논문에서 **콤마 which** 와 같은 표현이 나오는 경우는 앞 문장 전체를 받아서 의미를 발전시켜 나갈때 자주 쓰인다. 예를 들면,
+> When it comes to the perception of stickiness, **little is known about its perceptual dimensions,** *which makes it difficult to understand the underlying mechanisms*.
+> - '**perceptual dimensions에 대해서 거의 모르는 것**을 이해하기 어렵게 만든다'는 의미이므로 which의 앞문장 전체를 받아서 의미를 발전시켰다고 볼 수 있다.
+
+### 콤마는 군더더기를 덧붙일 때 사용된다.
+마지막 예시에서 which 이후의 내용을 몰라도 우리가 문장을 이해하는데 아무런 지장이 없다. 따라서 문장을 구성하는데 콤마 이후의 것들은 필수적인 요소가 아니기 때문에 콤마를 활용하여 덧붙여 주는 용도로 사용되는 것이다.
+
+### 그 외 유용한 팁들
+- ", that" 이라는 표현은 없다. 그렇게 써야하는 경우는 ", which" 로 쓸 것.
+- [관련 사이트](http://blog.naver.com/PostView.nhn?blogId=ufk7891&logNo=220990770246&parentCategoryNo=&categoryNo=32&viewDate=&isShowPopularPosts=true&from=search)
