Update about.md and fixed the title of across.md Feb 4 2021 00:23 am.

--- a/_posts/2021-02-03-across.md
+++ b/_posts/2021-02-03-across.md
@@ -1,5 +1,5 @@
 ---
-title: 생각보다 많이 쓰이는 표현: across
+title: 생각보다 많이 쓰이는 표현 across
 author: Saekwang Nam
 date: 2021-02-03 20:09:00 +0100
 categories: [Technical Writing, 단어]
