New post about "according to"
9:14 pm, Feb. 13, 2021

--- a/_posts/2021-02-02-Comma.md
+++ b/_posts/2021-02-02-Comma.md
@@ -42,6 +42,12 @@ pinned: false
 ### 콤마는 군더더기를 덧붙일 때 사용된다.
 마지막 예시에서 which 이후의 내용을 몰라도 우리가 문장을 이해하는데 아무런 지장이 없다. 따라서 문장을 구성하는데 콤마 이후의 것들은 필수적인 요소가 아니기 때문에 콤마를 활용하여 덧붙여 주는 용도로 사용되는 것이다.
 
+### 콤마를 활용한 예제들
+- The social network, which has a history of cloning its competitors, has started working on an audio chat product.[^footnote_1]
+
 ### 그 외 유용한 팁들
 - ", that" 이라는 표현은 없다. 그렇게 써야하는 경우는 ", which" 로 쓸 것.
 - [관련 사이트](http://blog.naver.com/PostView.nhn?blogId=ufk7891&logNo=220990770246&parentCategoryNo=&categoryNo=32&viewDate=&isShowPopularPosts=true&from=search)
+
+### Sources
+[^footnote_1]: https://www.nytimes.com/2021/02/10/technology/facebook-building-product-clubhouse.html?searchResultPosition=3
