--- a/_posts/2021-02-03-across.md
+++ b/_posts/2021-02-03-across.md
@@ -31,10 +31,16 @@ pinned: false
 - On the other side of something (어떤 것의 다른면, 건너편, 반대면)
 - from one side to the other of something (가로지르는 느낌)
 
-## 두가지 용법과 예시
+### 두가지 용법과 예시
 또한 전치사 말고도 부사로도 쓰인다고 한다. 다음은 across 를 활용한 문장의 예이다.
 > The bus stop is **across from** the entrance of the school.
 > - 버스 정류장은 학교 정문 건너편에 있다. (across는 부사로 쓰임)
 
 > 31 bridges has been built **across** Han river.
 > - 31개의 다리가 한강을 가로질러 세워졌다. (across는 전치사로 쓰임)
+
+### 예시 문장들
+- The result was a video immediately hailed across the internet as an instant classic.[^footnote_1]
+
+### Sources
+[^footnote_1]: https://www.nytimes.com/2021/02/09/style/cat-lawyer-zoom.html
