--- a/_posts/2021-02-23-article.md
+++ b/_posts/2021-02-23-article.md
@@ -8,26 +8,29 @@ use_math: true
 mermaid: true
 pinned: false
 ---
+##  A 냐, the 냐 그것이 문제로다.
+다음 예시를 보자.
+1. I know Korean.
+2. I know the Korean word.
+3. I know a Korean word.
 
-## 여기서는 the 인 것 같은데?
-관사 (a, the) 는 한국어 문법에서 없는 것들이며, 더구나 네이티브들조차 정확하게 설명을 못하는 문법 요소이다. 더구나 논문을 쓰다보면 정말로 헷갈리는 것 중의 하나가 A의 B라는 표현을 할때, 어디에 어떤 관사가 와야 하는가이다. 심지어 다음과 같은 말을 하는 사람들도 있었다.
+셋 중에 무엇이 맞을까? 정답은 모두 다 맞다. 한국어에 관사가 없어 어렵게 느껴지지만, 영어에서는 관사를 활용하여 뜻의 뉘앙스를 정확히 전달한다.
 
-> **명사 of 명사** 꼴의 대부분은 명사 앞에 the를 붙이면 된다.
-> 애매하니까 하나는 복수처리 해 주자.
+위 세 문장의 뉘앙스를 설명하자면, 1번 문장은 "나는 (일반적으로) 한국어를 알고 있다"는 뜻이다. 2번 문장은 어떠한 한국 단어가 화자의 대화에서 나왔을 때, "나는 그 단어를 알아요!"라고 하는 느낌이다. 3번 문장은 한국에 관한 이야기를 하는 상황에서 "나, 아는 한국어 단어가 있어!" 라는 느낌이다.
 
-미국인 교수님께 배운 영작 원리 중의 가장 와닿는 말씀은 *"단어 하나하나, 표현 하나하나가 독자에게 정확하게 전달되어야 한다."* 였다. 위와 같이 애매하게 쓴다면, "우리도 영어로 무엇을 말하고 싶은지 잘 모릅니다." 라고 하는 것과 같다.
-
-관사는 네이티브 스피커가 아닌 이상 문법적으로 항상 정확하게 쓰기 어려우며, 문장의 뉘앙스에 따라서 a 와 the 사이에서 쓰임이 갈리기도 한다. 하지만, 최소한 정리를 한 번 해 놓으면, 문장을 쓸 때 기준이 생기므로, 정리를 한번 하고자 한다. 수 많은 용법이 있으나, 논문을 쓰는데 도움 될 만한 정보만 정리하였다.
+어렵지만 이걸 정복해야 영어 라이팅의 실력이 느는 것을 느낄 수 있다. 부정관사, 정관사, 그리고 관사가 오지 않는 경우를 아래와 같이 정리하였다.
 
 ## 1. 부정관사 "a/an" 가 오는 경우
 **"a/an"** is basically an adjective and always has a nuance of "one" or "one from many".
-**"부정"** 이라는 뜻 자체가 "정해지지 않은" 이라는 뜻을 의미하므로 막연한 명사에 자주 쓰인다.
+**"부정"** 이라는 뜻 자체가 "정해지지 않은" 이라는 뜻을 의미하므로 일반적인 개념을 설명할 때 자주 쓰인다. 그리고 그 다음에 복수명사가 올 수 없다.
 
-### 1.1. "명사"를 총칭하여 대표 단수로 쓰고 싶을 경우
-- A mobile phone is useful.
-  - 휴대폰을 대표하여
+### 1.1. Specific 하지 않은 것을 의미하는 경우
+- Please hand me **a** book.
+  - 특정 책이 아닌 아무 책 "하나"를 의미한다.
 
-### 1.2. (그것이 무엇이든) "하나" 로 해석이 될 때
+- People have developed **an** incredibly complex network of stories.
+  - 이야기로 이루어진 "하나"의 복잡한 네트워크
+
 - He did not say a word.
   -  우리는 그 단어가 무엇인지 크게 신경쓰지 않고 "하나의 단어도 (즉, 한마디도) 말하지 않았다"로 해석하게 된다.
 
@@ -37,6 +40,9 @@ pinned: false
 ## 2. 정관사 "the" 가 오는 경우
 **"The"** is basically a demonstrative adjective, similar to "that".
 **정**해진 관사이므로, 구체적인 명사에 쓰인다. 
+> Are you going to **the** party today?
+> 이 질문에는 어떠한 파티인지 내가 알고 있다는 것을 가정하고 묻는 상황이다. 
+특정한 어떤 명사를 의미하는 것이기 때문에, 부정관사 (a) 의 쓰임과는 다르게, 정관사 (the) 는 뒤에 복수명사가 오는 것이 가능하다.
 
 ### 2.1. 앞에 있는 명사를 다시 언급할 때
 주로 논문에서는 "그" 물질, "그" 방법 등의 지칭하는 용도로 the 가 많이 쓰인다는 것을 알아두자.
@@ -54,11 +60,26 @@ pinned: false
 정관사에 관한 그 외의 용법들은 다음을 참고하자.[^ft_2]
 
 ## 3. 관사가 붙지 않는 경우
-나도 사실 배우고 있는 입장이라, 이건 정리하기가 조금 쉽지 않다. 다른 사이트에서 가져온 내용으로 대체한다.[^ft_3]
-> 정리를 다시 하자면 “ 그 명사(사물, 사람, 장소)가 쓰이는 문장에서 그 단어가 대표하는, 그 명사가 원래 가진 전반적인 속성에 관해 기술할 때는 관사를 쓰지 않는다.”는 것이 원칙이고 이 것이 맞는지 확인하는 방법은 ‘~란 것은’으로 해석이 되는지 보면 되는 것이되 똑같은 의미로 쓰이더라도 명사가 주어로 오면 관사를 아무 것이나(정관사든 부정관사든) 쓰는 것을 고려하라는 것입니다.
+이런 경우는 많은 경우가 있는데, 대표적인 몇가지만 추려 보았다. [^ft_4]
+
+### 3.1. 추상적인 개념을 명사로 쓰는 경우
+- ~~The~~ **Creativity** is a valuable quality in children.
+  - 창의력은 셀 수 없고, 특정될 수 없으므로 관사를 생략!
+
+### 3.2. 국가나 언어에서는 관사 생략
+- I know ~~the~~ **Korean**.
+  - 이건 일반적으로 한국어를 안다는 의미로 사용된 경우이다.
+
+### 3.3. 학문 분야나 스포츠를 나타낼 때는 관사 생략
+- I love to watch ~~the~~ **baseball**.
+- He has studied in ~~the~~ **Mechanical engineering**.
+
+### 3.4. 목적어 앞에 소유격이 나오는 경우
+- I want to return ~~the~~ **your** book.
 
 
 ## Sources
 [^ft_1]: https://forum.wordreference.com/threads/‘the-noun-of-noun’-vs-‘a-noun-of-noun’.3346068/
 [^ft_2]: https://blog.naver.com/et0876/220863071396
 [^ft_3]: https://ko.usmlelibrary.com/entry/no-article
+[^ft_4]: https://www.grammarly.com/blog/articles/
