--- a/_posts/2021-03-15-abstract.md
+++ b/_posts/2021-03-15-abstract.md
@@ -13,7 +13,7 @@ pinned: false
 한글로는 초록이라고 하는데, 의미를 검색해보니
 - 어떤 문장에서, 필요한 것만 뽑아내어 기록하는 일. 또는, 그렇게 기록한 것.
 
-으로 설명되어 있다. 초록이 들어가는 글은, 학회 포스터, 학술 논문, 학위 논문 등 다양하지만, 이번에는 학술 논문 (Journal paper) 에 맞추어서 설명을 하고자 한다. 시작하기에 앞서, **본 내용은 Max Planck Institute for Intelligent Systems 에서 진행된 Deborah Bennett 씨의 writing workshop 의 내용 일부를 발췌한 것임을 미리 밝혀둔다.**[^fn_1]
+으로 설명되어 있다. 초록이 들어가는 글은, 학회 포스터, 학술 논문, 학위 논문 등 다양하지만, 이번에는 학술 논문 (Journal paper) 에 맞추어서 설명을 하고자 한다. 시작하기에 앞서, **본 내용은 Max Planck Institute for Intelligent Systems 에서 진행된 Dr. Deborah Bennett 씨의 writing workshop 의 내용 일부를 발췌한 것임을 미리 밝혀둔다.**[^fn_1]
 
 또한, Science Advances 에서 무작위로 뽑은 논문의 abstract가 아래의 법칙을 어떻게 잘 따르는지 예시로 넣어 두었다.
 ## 1. Background (1 - 3 문장)
