--- a/_posts/2021-06-02-during.md
+++ b/_posts/2021-06-02-during.md
@@ -26,7 +26,7 @@ During은 당연히 a period or range of time 을 나타내지만, 더 중요한
 - We ate fried chickens during the evening.
   - 저녁시간이 중요한 것이 아니라 치킨을 먹은 행위가 가장 중요하고, 먹은 시점이 저녁이라는 의미이다.
 
-### 2. In: 일어난 시점보다 "언제"가 더 중요.
+### 2. In: 액션보다 "언제"가 더 중요.
 어떤 액션이 일어난 시점, 시기가 중요한 경우는 in 을 쓴다.
 - We ate fried chickens in the evening.
   - 위와 같은 문장이라도 (하필이면) "저녁에" 치킨을 먹었다는 의미가 될 것이다.
